static/index.css
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body{
    background: url("../static/images/register-back-image.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    backdrop-filter: blur(10px);
    width: 100%;
    height: 100vh;
    display: flex;
    align-items: center;
}

header{
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(5px);
    width: 100%;
    height: 4rem;
    position: fixed;
    top: 0;
    left: 0;
    border-radius: 0 0 15px 15px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.459);
    display: flex;
    align-items: center;
}

#display-username{
    color: white;
    margin: 0 2rem;
    font-size: large;
}

#rooms-container{
    width: 90%;
    max-width: 800px;
    margin: 6rem auto 0;
    display: flex;
    flex-direction: column; 
    gap: .8rem;
}

.room{
    display:flex;
    justify-content:space-between;
    align-items:center;

    padding:1rem 1.3rem;

    background:rgba(255,255,255,.08);
    backdrop-filter:blur(10px);

    border:1px solid rgba(255,255,255,.15);
    border-radius:12px;

    color:white;

    cursor:pointer;
    transition:.2s;
}

.room:hover{
    transform:translateY(-2px);
    background:rgba(255,255,255,.14);
}

